# codeng

./: .gitignore  AGENTS.md  README.md  notes.org  plan.md  pyproject.toml  refactor-plan.md  todo.org  todo.org_archive
.vocode/: config-ng.yaml  config.yaml
.vocode/workflows/: agent.yaml  analyst.yaml  chat.yaml  subagents.yaml
docs/design/: context-compaction-spec.md  message-based-context-compaction.md
docs/reference/: webclient-requests.md
src/code/: models.py  project.py  state.py
src/vocode/: auth.py  config.py  connect_auth.py  error_reporting.py  graph.py  input_manager.py  logger.py  models.py  project.py  project_state.py  skills.py  startup_timing.py  state.py  templates.py  ui_events.py  vars.py  vars_values.py
tests/: stub_project.py  test_auth.py  test_connect_auth.py  test_http_input_executor.py  test_http_internal.py  test_input_manager.py  test_logger.py  test_manager_nested_workflow.py  test_message_helpers.py  test_persistence.py  test_persistence_context_compaction.py  test_project.py  test_runner.py  test_skills.py  test_state.py
tests/executors/: test_exec_agent.py  test_exec_executor.py  test_llm.py  test_llm_compaction.py  test_llm_executor_build_messages.py
tests/manager/: runner_stubs.py  test_autocomplete_manager.py  test_command_manager.py  test_manager_autocomplete.py  test_manager_events.py  test_message_controller.py  test_runner_event_controller.py  test_server_lifecycle.py  test_server_progress.py  test_ui_server.py  test_var_autocomplete_llm_models.py  test_vars_command.py
tests/mcp/: test_mcp_auth.py  test_mcp_client.py  test_mcp_converters.py  test_mcp_naming.py  test_mcp_process_manager.py  test_mcp_protocol.py  test_mcp_registry.py  test_mcp_runtime_models.py  test_mcp_service.py  test_mcp_settings.py  test_mcp_transports.py
tests/patch/: test_apply_patch_summary.py  test_patch_format.py  test_v4a_format.py
tests/proc/: test_shell_manager.py  test_shell_persistent.py
tests/project/: test_startup_timing.py  test_ui_events.py
tests/runner/: test_apply_patch_executor.py  test_exec_executor.py
tests/settings/: test_error_reporting.py  test_loader_variables.py  test_mcp_client.py  test_mcp_protocol.py  test_mcp_runtime_models.py  test_mcp_service.py  test_mcp_transports.py  test_tool_spec.py
(+238 files in other folders)
