[project]
name = "vopscode"
version = "0.1.0"
description = "Vectorops Code"
readme = "readme.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "connect @ git+https://github.com/VectorOps/connect.git",
    "devtools==0.12.2",
    "pydantic==2.12.5",
    "pytest==9.0.2",
    "pyyaml==6.0.3",
    "gitpython==3.1.46",
    "structlog==25.5.0",
    "json5==0.13.0",
    "knowlt @ git+https://github.com/vectorops/knowlt.git@d685baf585e7b8e1ad47c1758db78b512b134357",
    "rich==14.3.3",
    "pyfiglet==1.0.4",
    "aiohttp==3.13.5",
]

[tool.uv]
package = true
exclude-newer = "1 week"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
plugins = ['pydantic.mypy']

[dependency-groups]
dev = [
    "black==25.12.0",
    "mypy==1.19.1",
    "pytest-asyncio==1.3.0",
]
